fixed size for pb desired start times labels

--- a/app/scheduler/templates/pb-scheduled-list.html
+++ b/app/scheduler/templates/pb-scheduled-list.html
@@ -11,7 +11,7 @@
                 {{pb.description}}
             </span>
 
-            <div ng-show="pb.id > -1" layout="column" layout-align="center" style="position: absolute; top: 2px; right: 120px; font-size: 9px">
+            <div ng-show="pb.id > -1" layout="column" layout-align="center" style="position: absolute; top: 2px; right: 40px; font-size: 9px; max-width: 162px; min-width: 162px">
                 <span>Desired LST Start Time: {{pb.desired_lst_start_time}}</span>
                 <span>Desired Start Time: {{pb.desired_start_time}}</span>
             </div>
