--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -104,13 +104,13 @@
     margin-top: 8px;
 
     .pb-schedule-item-header {
-        height: 84px;
+        height: 42px;
         position: relative;
     }
 }
 .pb-schedule-item-header-title {
     position: absolute;
-    top: 2px;
+    top: 0;
     left: 32px;
     right: 32px;
     font-size: 18px;
