--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-align="center" class="subarray-config-container">
-    <span md-ink-ripple ng-click="parent.vm.showSubarrayLogs()" class="icon-button fa fa-file-text-o" title="Show Subarray logs"
-        style="font-size: 12px; height: 14px; padding: 2px 4px; opacity: 0.5"></span>
+    <span md-ink-ripple ng-click="parent.vm.showSubarrayLogs()" class="icon-button fa fa-file-text-o opaque-hover" title="Show Subarray logs"
+        style="font-size: 18px; height: 22px; padding: 2px 4px"></span>
     <md-menu>
         <span ng-disabled="!$root.expertOrLO" title="Control Authority" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
@@ -50,7 +50,7 @@
             </md-menu-item>
         </md-menu-content>
     </md-menu>
-    <span ng-show="vm.subarray.config_label" title="Config Label" style="margin-left: 2px">
+    <span ng-show="vm.subarray.config_label" title="Config Label" style="margin: 0 12px; cursor: default">
          <i>Config Label: </i><b>{{vm.subarray.config_label ? vm.subarray.config_label : 'None'}}</b>
      </span>
 </div>
