--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -33,9 +33,9 @@
         </md-menu-content>
     </md-menu>
     <md-menu>
-        <span ng-disabled="!$root.expertOrLO" title="Selected Product" ng-click="$root.expertOrLO && $mdMenu.open($event)"
+        <span ng-disabled="!$root.expertOrLO" title="Selected User Product" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
-             <i>Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
+             <i>User Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
          </span>
         <md-menu-content>
             <md-menu-item>
