--- a/app/health/health.less
+++ b/app/health/health.less
@@ -8,6 +8,7 @@
 .unknown-child {
     background-color: #9E9E9E;
     fill: #9E9E9E;
+    color: #fff;
     rect {
         fill: #9E9E9E;
     }
@@ -30,6 +31,7 @@
 .nominal-child {
     background-color: #4CAF50;
     fill: #4CAF50;
+    color: #fff;
     rect {
         fill: #4CAF50;
     }
@@ -52,6 +54,7 @@
 .warn-child {
     background-color: #FFC107;
     fill: #FFC107 !important;
+    color: #fff;
     rect {
         fill: #FFC107;
     }
@@ -74,6 +77,7 @@
 .error-child {
     background-color: #F44336;
     fill: #F44336;
+    color: #fff;
     rect {
         fill: #F44336;
     }
@@ -96,6 +100,7 @@
 .failure-child {
     background-color: #3F51B5;
     fill: #3F51B5 !important;
+    color: #fff;
     rect {
         fill: #3F51B5;
     }
@@ -118,6 +123,7 @@
 .unreachable-child {
     background-color: #EC407A;
     fill: #EC407A !important;
+    color: #fff;
     rect {
         fill: #EC407A;
     }
@@ -139,6 +145,7 @@
 
 .in-maintenance-child {
     stroke: #9C27B0 !important;
+    color: #fff;
 
     text {
         stroke: transparent;
@@ -154,6 +161,7 @@
 .inactive-child {
     background-color: #000;
     fill: #000 !important;
+    color: #fff;
     rect {
         fill: #000;
     }
