--- a/app/health/health.less
+++ b/app/health/health.less
@@ -146,6 +146,7 @@
 .in-maintenance-child {
     stroke: #9C27B0 !important;
     color: #fff;
+    border: 8px solid #9C27B0 !important;
 
     text {
         stroke: transparent;
